2006-03-04  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4 released
	
2006-03-02  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4_pre3
	
2006-03-02  Katsutoshi Itoh  <cut-sea@kahua.org>

	* src/kahua/elem.scm
	use gauche.collection in order to be able to apply map/ for collection.
	
2006-03-01  Katsutoshi Itoh  <cut-sea@kahua.org>

	* src/kahua/persistent.scm
	Fixed kahua-serializable-object? bug.
	It was failed at dot pair,which has only serializable members.
	
2006-02-21  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4_pre2
	Fixed mistakes in branch merging.
	
2006-02-21  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4_pre1 
	Kahua-spvr multi-threaded.

2006-02-20  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Fixed '\\' in key-of value bug? (FSDB)

2006-02-18  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm, test/entry-method.scm:
	Changed *class&id-delim* to "\t".

2006-02-17  SHIBATA Tomohisa  <shibata@kahua.org>

	* ChangeLog, src/kahua/test/worker.scm:
	Chnaged `set-gsid' to test session setting.

2006-02-18  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/worker.scm: Improved path-info picking.
	"hoge//huga/" -> '("hoge" "" "huga" "")
	to
	"hoge//huga/" -> '("hoge" "huga")

2006-02-17  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/worker.scm:
	Chnaged `set-gsid' to test session setting.


2006-02-15  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/elem.scm, src/kahua/server.scm, test/server.scm:
	Added `with-ie' element.
	Supported `Conditional Comments for Internet Explorer'.

2006-02-04  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Changed to use dbi-do instead of dbi-execute-query.

2006-02-01  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added kahua-header-set!.
	Added "x-kahua-headers" to kahua context.

	* src/kahua/sandbox.scm:
	Changed disable-bindings syntax to use `define' instead of `define-macro'.

2006-01-28  SHIBATA Tomohisa  <shibata@kahua.org>
